--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -30,7 +30,7 @@
           <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="/">Home</a></li>
-                <li><a href="/speakers" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Speakers <span class="caret"><span></a>
+                <li><a href="/speakers" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Speakers <span class="caret"></span></a>
                   <ul class="dropdown-menu">
                     <li><a href="/speakers">All Speakers</a></li>
                     <li role="separator" class="divider"></li>
