--- a/app/views/partials/template/jsdefaults.ejs
+++ b/app/views/partials/template/jsdefaults.ejs
@@ -6,4 +6,8 @@
 <% } %>
 
 
+<% if(pageID == "feedback") { %>
+  <script src="/js/feedback.js"></script>
+<% } %>
+
 <script src="/reload/reload.js"></script>
